# mnemosyne

./: .gitignore  Cargo.toml  IDEAS.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: MANUAL_INSTALL.md  RELEASE_NOTES.md  USAGE.md
memory-common/: Cargo.toml  README.md
memory-common/src/: anatomy.rs  compress.rs  db.rs  jsonl.rs  lib.rs  logging.rs  models.rs  schema.rs
memory-hooks/: Cargo.toml  README.md
memory-hooks/src/: main.rs  post_read.rs  post_write.rs  pre_read.rs  pre_write.rs  session_start.rs
memory-mcp-server/: Cargo.toml  README.md
memory-mcp-server/src/: main.rs  tools.rs
scripts/: install.ps1  install.sh
session-ingester/: Cargo.toml  README.md
session-ingester/src/: main.rs
