[package]
name = "memory-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared SQLite schema, JSONL parser, and data models for Mnemosyne"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
