[package]
name = "memory-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Real-time hook handlers for pre/post read/write events"

[dependencies]
memory-common = { workspace = true }
rusqlite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
