[package]
name = "memory-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
memory-common = { path = "../memory-common" }
rusqlite = { version = "0.32", features = ["bundled"] }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
