[package]
name = "session-ingester"
version = "0.1.0"
edition = "2021"

[dependencies]
memory-common = { path = "../memory-common" }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
serde_json = "1"
chrono = "0.4"
