[package]
name = "session-ingester"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI that scans and ingests JSONL transcripts into SQLite"

[dependencies]
memory-common = { workspace = true }
rusqlite = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glob = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
